Fixed back icon to display correctly on mobile.

--- a/less/locations.less
+++ b/less/locations.less
@@ -20,6 +20,11 @@
     left: 20px;
     width: 40px;
     height: 40px;
+
+    @media only screen and (max-width: 767px) {
+        top: 20px;
+        z-index: 9999;
+    }
 }
 
 /* Style the heading */
@@ -30,6 +35,10 @@
     letter-spacing: 2px;
     margin-bottom: 30px;
     margin-left: 20px;
+
+    @media only screen and (max-width: 767px) {
+        font-size: 48px;
+    }
 }
 
 .locations {
